--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center;color:purple">Time and Space Complexity</h1>
+	<p style="text-align:center;color:rosybrown;font-size:18px">Algorithm complexity refers to how efficient an algorithm is in terms of time and space required to solve a problem. <b>Time complexity</b>of an algorithm refers to the amount of time an algorithm takes to run as a function of the size of the input data. It is expressed in terms of the number of basic operations performed by the algorithm. The best-case time complexity of an algorithm is the minimum amount of time it takes to solve a problem for any input. The worst-case time complexity is the maximum amount of time it takes to solve a problem for any input. The average-case time complexity is the expected amount of time it takes to solve a problem for a random input.</p>
+	<p style="text-align:center;color:orange;font-size:18px"><b>Space complexity</b> of an algorithm refers to the amount of memory or storage space required to solve a problem. It is expressed in terms of the size of the input data. Like time complexity, space complexity can also be expressed in terms of the best, worst, and average cases. Linear Space Complexity O(n) : An algorithm that requires memory proportional to the size of the input data has a linear space complexity. An example of a linear space complexity algorithm is linear search..</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
